# qemu-world-lifetime

./: .dockerignore  .env.example  .gitignore  BOOTSTRAP.md  Dockerfile  README.md  core.py  dhcp.txt  docker-compose.yml  pyproject.toml  qemu_lifetime_report.py  requirements.txt  web.py
migrations/: 0001_init.sql  0002_role_capabilities.sql  0003_placement_schema.sql  0004_dashboard_metric_history.sql
openstack_bi/: __init__.py  _env_legacy.py  cli.py  config.py  config_db.py  dashboard_metrics.py  netcheck.py  neutron.py  nova.py  openstack.py  scheduler.py  util.py
openstack_bi/auth/: __init__.py  capabilities.py  keystone.py  local.py  session.py  token_store.py
openstack_bi/reports/: __init__.py  base.py  domain_leaderboard.py  fip_audit.py  fip_pools.py  fip_subnets.py  host_capacity.py  instance_history.py  instance_leaderboard.py  issues.py  locate_instance.py  project_growth.py  qemu_lifetime.py  snapshot_leaderboard.py  spla_hosts.py  spla_instances.py  stale_snapshots.py  volume_history.py  volume_resizes.py
static/css/: app.css  (+2 more)
templates/: base.html  catalog.html  dashboard.html  error.html  index.html  login.html  report.html
tests/: conftest.py  test_admin_access.py  test_capabilities.py  test_config_db.py  test_dashboard_metrics.py  test_dashboard_routes.py  test_env_legacy.py  test_host_capacity.py  test_instance_routes.py  test_keystone_auth_mocked.py  test_local_auth.py  test_locate_instance.py  test_netcheck.py  test_neutron.py  test_nova.py  test_scheduler.py  test_spla_hosts.py  test_token_store.py  test_tools_routes.py  test_util.py
(+35 files in other folders)
