[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openstack-ops-bi"
version = "0.2.0"
description = "Multi-region OpenStack operations/BI reporting suite"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "PyMySQL>=1.0,<2.0",
  "Flask>=2.3,<4.0",
  "openpyxl>=3.1,<4.0",
  "python-dotenv>=1.0,<2.0",
  "matplotlib>=3.5,<4.0",
]

[project.scripts]
opsbi = "openstack_bi.cli:main"

[tool.setuptools.packages.find]
include = ["openstack_bi*"]
exclude = ["templates*", "static*", ".venv*"]
